push data to analytical graph. needs formatting

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -199,7 +199,7 @@
                         if (response.data)
                         {
                         console.log("fired the ajax")
-                        make_analytical_chart()
+                        make_analytical_chart(response)  
                         }
                     },
                     failure: function (){
@@ -207,7 +207,7 @@
                     }
             });
 
-            function make_analytical_chart(){
+            function make_analytical_chart(response){
                 Highcharts.chart(analytical_graph_div_id, {
                     chart: {
                         type: 'scatter',
@@ -240,22 +240,7 @@
                             }
                     },
                     series: [{
-                        data: [{
-                            name: 'one',
-                            x: 161.2,
-                            y: 51.6
-                            },
-                            {
-                            name: 'two',
-                            x: 167.5,
-                            y: 59.0
-                            },
-                            {
-                            name: 'three',
-                            x: 159.5,
-                            y: 49.2
-                            }
-                        ]
+                        data: response.data.analytical_graph
                     }]
                 });
             }
