variable name change plus add variables for table div ids

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -95,9 +95,12 @@
         var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 
         var credit_risk_div_id = "credit_risk_analytics_div"
-        var new_analytics_row_div_id = "new_analytics_row_div"
+        var new_analytics_row_graphs_div_id = "new_analytics_row_graphs_div"
+        var new_analytics_row_tables_div_id = "new_analytics_row_tables_div"
         var analytical_graph_div_id = "analytical_graph_div"
         var simulation_graph_div_id = "simulation_graph_div"
+        var bond_table_div_id = "bond_table_div"
+        var percentile_table_div_id = "percentile_table_div"
 
         function make_sized_analytics_div(div_title, graph_div_id, size){
             // div_title is is what goes in the <b2> title
@@ -153,7 +156,7 @@
             var correlation = jQuery("#form_correlation_id").val()
 
             // remove analytical divs if exists, so two clicks doesn't make doubles
-            var existing_analytics_row_div = document.getElementById(new_analytics_row_div_id)
+            var existing_analytics_row_div = document.getElementById(new_analytics_row_graphs_div_id)
             if (existing_analytics_row_div){
                 existing_analytics_row_div.remove()
             }
@@ -164,7 +167,7 @@
             // make a new div with class = row
             var new_row_div = document.createElement("div")
             new_row_div.setAttribute("class", "row")
-            new_row_div.setAttribute("id", new_analytics_row_div_id)
+            new_row_div.setAttribute("id", new_analytics_row_graphs_div_id)
 
             // make either one full or two half analytics divs based on calculation_type and append to new_row_div
             if (calculation_type == "Analytical + Monte"){
@@ -199,7 +202,7 @@
                         if (response.data)
                         {
                         console.log("fired the ajax")
-                        make_analytical_chart(response)  
+                        make_analytical_chart(response)
                         }
                     },
                     failure: function (){
