add datatables script to base html

--- a/source/web/dashboard/templates/base.html
+++ b/source/web/dashboard/templates/base.html
@@ -144,6 +144,9 @@
     <script src="{% static 'dashboard/highcharts/modules/export-data.js' %}"></script>
     <script src="{% static 'dashboard/highcharts/modules/accessibility.js' %}"></script>
 
+    <!-- Datatables -->
+    <script src="{% static 'dashboard/datatables/datatables.min.js' %}"></script>
+
     <!-- Custom Page Scripts -->
     <script>
         var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
