formatting for Bond Results table

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -188,8 +188,8 @@
             if (calculation_type == "Analytical + Monte"){
                 var analytical_graphs_div = make_sized_analytics_div("Analytical", analytical_graphs_div_id, "half")
                 var simulation_graphs_div = make_sized_analytics_div("Simulation", simulation_graphs_div_id, "half")
-                var analytical_tables_div = make_sized_analytics_div("Bond Results", analytical_tables_div_id, "half", true)
-                var simulation_tables_div = make_sized_analytics_div("Percentiles", simulation_tables_div_id, "half", true)
+                var analytical_tables_div = make_sized_analytics_div("Bond Results (in millions)", analytical_tables_div_id, "half", true)
+                var simulation_tables_div = make_sized_analytics_div("Percentiles (in millions)", simulation_tables_div_id, "half", true)
                 new_row_graphs_div.appendChild(analytical_graphs_div)
                 new_row_graphs_div.appendChild(simulation_graphs_div)
                 new_row_tables_div.appendChild(analytical_tables_div)
