add scatter coloring for ratings

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -304,9 +304,7 @@
                                 }
                             }
                     },
-                    series: [{
-                        data: response.data.analytical_graph
-                    }]
+                    series: response.data.analytical_graph
                 });
             }
 
